// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makePot concatenated pot should match its snapshot 1`] = `
"# THIS IS A GENERATED FILE. DO NOT EDIT DIRECTLY.

msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

#: test/examples/react-1.jsx:10
#: test/examples/react-2.jsx:5
msgid \\"Prop string\\"
msgstr \\"\\"

#: test/examples/translate-1.js:2
#: test/examples/translate-2.js:7
#: test/examples/wordpress-i18n.js:2
#. Second occurrence of \`Simple string\` should also be extracted.
msgid \\"Simple string\\"
msgstr \\"\\"

#: test/examples/translate-1.js:4
#: test/examples/wordpress-i18n.js:4
msgid \\"Singular\\"
msgid_plural \\"Plural\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

#: test/examples/translate-1.js:14
#: test/examples/translate-1.js:18
#: test/examples/wordpress-i18n.js:11
#: test/examples/wordpress-i18n.js:14
#. String comment
msgid \\"String with comment\\"
msgid_plural \\"Plural with comment\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

#: test/examples/translate-2.js:11
#: test/examples/translate-2.js:12
#. First comment
#. Second comment
msgid \\"Stack comments\\"
msgstr \\"\\"

#: test/examples/translate-2.js:15
#: test/examples/translate-2.js:18
#. Extract from leading comment first
#. Extract from leading comment second
msgid \\"Extract from leading comment\\"
msgstr \\"\\"

#: test/examples/translate-2.js:20
msgid \\"Exrract _x as alias for translate\\"
msgid_plural \\"Second param should be extracted as plural instead of context\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

#: test/examples/typescript-react.tsx:11
msgid \\"Typescript react component string\\"
msgstr \\"\\"

#: test/examples/react-1.jsx:13
#: test/examples/react-2.jsx:8
#. Extract from leading
msgctxt \\"react\\"
msgid \\"Child string\\"
msgid_plural \\"Child string plural\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

#: test/examples/translate-1.js:6
#: test/examples/translate-1.js:10
#: test/examples/wordpress-i18n.js:6
#: test/examples/wordpress-i18n.js:8
msgctxt \\"simple context\\"
msgid \\"String with context\\"
msgid_plural \\"Plural with context\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

# THIS IS THE END OF THE GENERATED FILE."
`;

exports[`makePot concatenated pot should only contain allowed strings when line filter is provided 1`] = `
"# THIS IS A GENERATED FILE. DO NOT EDIT DIRECTLY.

msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

#: test/examples/translate-1.js:2
#: test/examples/translate-2.js:7
#: test/examples/wordpress-i18n.js:2
#. Second occurrence of \`Simple string\` should also be extracted.
msgid \\"Simple string\\"
msgstr \\"\\"

#: test/examples/translate-1.js:4
#: test/examples/wordpress-i18n.js:4
msgid \\"Singular\\"
msgid_plural \\"Plural\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

# THIS IS THE END OF THE GENERATED FILE."
`;

exports[`makePot pot files should match their snapshots 1`] = `
Array [
  "output/test-examples-react-1.jsx.pot",
  "output/test-examples-react-2.jsx.pot",
  "output/test-examples-translate-1.js.pot",
  "output/test-examples-translate-2.js.pot",
  "output/test-examples-typescript-react.tsx.pot",
  "output/test-examples-wordpress-i18n.js.pot",
]
`;

exports[`makePot pot files should match their snapshots 2`] = `
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

#: test/examples/react-1.jsx:10
msgid \\"Prop string\\"
msgstr \\"\\"

#: test/examples/react-1.jsx:13
#. Extract from leading
msgctxt \\"react\\"
msgid \\"Child string\\"
msgid_plural \\"Child string plural\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\""
`;

exports[`makePot pot files should match their snapshots 3`] = `
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

#: test/examples/react-2.jsx:5
msgid \\"Prop string\\"
msgstr \\"\\"

#: test/examples/react-2.jsx:8
#. Extract from leading
msgctxt \\"react\\"
msgid \\"Child string\\"
msgid_plural \\"Child string plural\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\""
`;

exports[`makePot pot files should match their snapshots 4`] = `
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

#: test/examples/translate-1.js:2
msgid \\"Simple string\\"
msgstr \\"\\"

#: test/examples/translate-1.js:4
msgid \\"Singular\\"
msgid_plural \\"Plural\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

#: test/examples/translate-1.js:14
#: test/examples/translate-1.js:18
#. String comment
msgid \\"String with comment\\"
msgid_plural \\"Plural with comment\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

#: test/examples/translate-1.js:6
#: test/examples/translate-1.js:10
msgctxt \\"simple context\\"
msgid \\"String with context\\"
msgid_plural \\"Plural with context\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\""
`;

exports[`makePot pot files should match their snapshots 5`] = `
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

#: test/examples/translate-2.js:7
#. Second occurrence of \`Simple string\` should also be extracted.
msgid \\"Simple string\\"
msgstr \\"\\"

#: test/examples/translate-2.js:11
#: test/examples/translate-2.js:12
#. First comment
#. Second comment
msgid \\"Stack comments\\"
msgstr \\"\\"

#: test/examples/translate-2.js:15
#: test/examples/translate-2.js:18
#. Extract from leading comment first
#. Extract from leading comment second
msgid \\"Extract from leading comment\\"
msgstr \\"\\"

#: test/examples/translate-2.js:20
msgid \\"Exrract _x as alias for translate\\"
msgid_plural \\"Second param should be extracted as plural instead of context\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\""
`;

exports[`makePot pot files should match their snapshots 6`] = `
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

#: test/examples/typescript-react.tsx:11
msgid \\"Typescript react component string\\"
msgstr \\"\\""
`;

exports[`makePot pot files should match their snapshots 7`] = `
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

#: test/examples/wordpress-i18n.js:2
msgid \\"Simple string\\"
msgstr \\"\\"

#: test/examples/wordpress-i18n.js:4
msgid \\"Singular\\"
msgid_plural \\"Plural\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

#: test/examples/wordpress-i18n.js:11
#: test/examples/wordpress-i18n.js:14
#. String comment
msgid \\"String with comment\\"
msgid_plural \\"Plural with comment\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

#: test/examples/wordpress-i18n.js:6
#: test/examples/wordpress-i18n.js:8
msgctxt \\"simple context\\"
msgid \\"String with context\\"
msgid_plural \\"Plural with context\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\""
`;
